# LUKA

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Might.docx  Mixed tenses_present perfect simple and continuous_past tense.docx  README.md  WS_Present Tense_Basics_2.docx  korrekturraster-natascha.skill  past vs present perfect_grammar worksheet and speaking actvitiy_coincidences.docx  session-ses_1478.md
apps/lua/src-tauri/: Cargo.toml  tauri.conf.json  tauri.natascha-sidecar.conf.json
apps/natascha/: .claudeignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  Chat mit Claude 290526.md  FEATURE_ASSESSMENT.md  KNOWN_ISSUES.md  PLAN_Kimi_QuickWins_NATASCHA.md  PROMPT_lehrer_notenerfassung.md  PROMPT_profil_speichern.md  PROMPT_profil_test.md  PROMPT_schueler_laengsschnitt.md  SECURITY_AUDIT.md  SIDECAR_BUILD.md  build_sidecar.ps1  build_sidecar.sh  create_shortcut.ps1  deepseek_diag.py  feedback_schema.json  generate_feedback.py  natascha.env.example  natascha.py  natascha.tcss  natascha_bridge.py  natascha_cli.py  natascha_config.toml  natascha_core.py  natascha_db.py  natascha_wizard.py  pseudonymisierung.py  pyproject.toml  requirements_cli.txt  requirements_tui.txt  run_natascha.sh  seed_testdaten.py  start_natascha.bat
apps/natascha/docs/: AENDERUNGEN_v072.md  AENDERUNGEN_v073.md  AGENT_PROMPTS.md  AGENT_PROMPTS_PHASE2.md  AGENT_TASKS.md  ANLEITUNG.md  AUFGABEN_CLAUDE.md  AUFGABEN_GLM.md  AUFGABEN_v07.md  BUGFIX_FEHLER_ARRAY.md  DESIGN_word_level_comments.md  FEATURE_INLINE_MARKIERUNG.md  HOTFIX_DOCX.md  MASTERPROMPT_v08.md  MASTER_PROMPT.md  PLAN_klassensystem.md  PROMPT_CC_v8_LOGO.md  PROMPT_GLM_TUI_v2.md  PROMPT_GLM_TUI_v3.md  PROMPT_GLM_TUI_v4.md  PROMPT_GLM_TUI_v5.md  PROMPT_GLM_TUI_v6_TEXTUAL.md  PROMPT_QWEN_RUBRIC_CHECK.md  TASK_DEAD_CODE_CLEANUP.md  TASK_NOTENBERECHNUNG.md  TASK_NOTENBERECHNUNG_FINAL.md  TASK_SRDP_RASTER_OUTPUT.md  TASK_VERSIONIERUNG.md
apps/natascha/prompts/: PROMPT_ERWARTUNGSHORIZONT.md  PROMPT_GLM_TUI.md
apps/natascha/rubrics/: AB_Checkliste_Textinterpretation.md  Zusammenfassung.md  bericht_unterstufe.md  beschreibung_unterstufe.md  deutsch_unterstufe.md  empfehlung_rezension.md  englisch_a2.md  eroerterung.md  kommentar.md  (+16 more)
(+446 files in other folders)
