[package]
name = "lehrunterlagen-tool"
version = "0.1.0"
description = "Lehrunterlagen-Tool Desktop App"
authors = ["Lehrunterlagen-Team"]
edition = "2021"
default-run = "lehrunterlagen-tool"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
integration-tests = []
